envoy/http_connection_manager/traffic_splitting/sample-2-weighted-clusters.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: listener_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: route
            virtual_hosts:
            - name: vh
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  weighted_clusters:
                    clusters:
                      - name: instance_1
                        weight: 50
                      - name: instance_2
                        weight: 30
                      - name: instance_3
                        weight: 20
  clusters:
  - name: instance_1
    connect_timeout: 5s
    load_assignment:
      cluster_name: instance_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3030
  - name: instance_2
    connect_timeout: 5s
    load_assignment:
      cluster_name: instance_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 4040
  - name: instance_3
    connect_timeout: 5s
    load_assignment:
      cluster_name: instance_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 5050
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901


# docker run -d -p 3030:80 kennethreitz/httpbin
# docker run -d -p 4040:80 kennethreitz/httpbin
# docker run -d -p 5050:80 kennethreitz/httpbin

# hey http://localhost:10000
